# PacketSniffer

./: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cert_store.rs  lib.rs  main.rs  system_proxy.rs
src-tauri/src/proxy/: ca.rs  engine.rs  http.rs  mitm.rs  mod.rs  ws.rs
src/components/: AboutDialog.tsx  BodyViewer.tsx  CaInstallDialog.tsx  CodeViewer.tsx  ContentFilterBar.tsx  DependencyDialog.tsx  DetailPanel.tsx  HeadersTable.tsx  MessagesTab.tsx  PreferencesDialog.tsx  RequestTable.tsx  Sidebar.tsx  Spinner.tsx  StatusBar.tsx  Toolbar.tsx  UpdateDialog.tsx
src/components/ui/: resizable.tsx
src/hooks/: useTauriEvents.ts  useTheme.ts
src/lib/: exportUtils.ts  utils.ts
