[package]
name = "packetsniffer"
version = "0.0.4"
edition = "2021"
description = "MITM-proxy with HTTP(s) interception and SSL decryption."

[lib]
name = "packetsniffer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rcgen = { version = "0.14", features = ["x509-parser"] }
webpki-roots = "1"
flate2 = "1"
brotli = "8"
directories = "6"
time = "0.3"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
bytes = "1"

# HTTP/1.1 + HTTP/2 support via hyper
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
http = "1"

# Streaming body support
tokio-stream = "0.1"

# Keep httparse for low-level parsing where needed
httparse = "1"
tauri-plugin-updater = "2.10.0"
base64 = "0.22.1"
hex = "0.4.3"
tauri-plugin-process = "2.3.1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
open = "5.3.3"
tauri-plugin-shell = "2.3.5"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
